# finetunning_comparations

./: .env.example  .gitignore  CONSISTENCY_REPORT.md  CONSTITUTION.md  NEW_FEATURE_SDD_GUIDE.md  README.md  finetunning.ipynb  main.py  pyproject.toml
.styles/: style.css
notebooks/: causal_finetuning_demo.ipynb
output_mrpc/checkpoint-500/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
output_mrpc/checkpoint-690/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
persistent/state/: results_snapshot.json  runtime_state.json
src/finetuner/: __init__.py  causal_engine.py  causal_training_orchestrator.py  checkpoint_handler.py  data_loader.py  laplace_engine.py  lora_engine.py  nie_strategy.py  qlora_engine.py
src/settings/: __init__.py  base.py  causal_config.py  experiment_settings.py  factory.py  settings.py
src/utils/: __init__.py  async_sampler.py  bayesian_sampler.py  causal_sampler.py  hf_manager.py  hypernetwork.py  logger.py  math_utils.py  memory_manager.py  metrics.py  multiprocessing.py  training_integrator.py
tests/: conftest.py  test_bayesian_sampler.py  test_causal_engine.py  test_causal_enhancements.py  test_causal_flow_e2e.py  test_causal_sampler.py  test_causal_training_orchestrator.py  test_checkpoint_handler.py  test_cross_cutting_validation.py  test_data_loader.py  test_finetunning.py  test_interventional_callback.py  test_laplace_engine.py  test_main.py  test_math_utils.py  test_metrics.py  test_metrics_aggregation.py  test_nie_strategy.py  test_notebook_orchestration.py  test_paraphrase.py  test_ring_buffer.py  test_settings.py  test_training_integrator.py
tests/finetuner/: test_causal_engine.py
