[project]
name = "finetunning"
version = "0.1.0"
description = "Finetuning project for language models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "transformers==4.38.2",
    "peft==0.8.2",
    "datasets==2.16.1",
    "evaluate==0.4.1",
    "accelerate==0.27.2",
    "pyarrow>=14.0.1",
    "scikit-learn>=1.3.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "bitsandbytes>=0.41.0",
    "tiktoken",
    "ipywidgets",
    "numpy<2.0.0",  #AttributeError: _ARRAY_API not found"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]