[project]
name = "finetunning"
version = "0.1.0"
description = "Finetuning project with NumPy binary compatibility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.2",  
    "peft>=0.8.2",          # to >= to allow 0.9.0+ if needed for Py3.12
    "datasets>=2.16.1",
    "evaluate>=0.4.1",
    "accelerate>=0.27.2",
    "pyarrow>=14.0.1",
    "scikit-learn>=1.3.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "bitsandbytes>=0.41.0",
    "tiktoken",
    "ipywidgets",
    "numpy>=1.23.5,<2.0.0", # Explicitly  1.x range to fix dtype size error
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]