[project]
name = "finetunning"
version = "0.1.0"
description = "Production-ready finetuning stack for Python 3.12"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",           # Torch 2.3+ is optimized for NumPy 2.0
    "transformers>=4.41.0",   # For NumPy 2.0 compatibility
    "peft>=0.11.0",           # Matches modern transformers/numpy headers
    "datasets>=2.19.0",       # Required for the new pyarrow integration
    "evaluate>=0.4.2",        # Latest stable to avoid evaluate/numpy 1.x leaks
    "accelerate>=0.30.0",
    "pyarrow>=16.1.0",        # Version 16.1.0 supports NumPy 2.0
    "scikit-learn>=1.5.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "bitsandbytes>=0.43.1",
    "tiktoken>=0.7.0",
    "ipywidgets>=8.1.0",
    "numpy>=2.0.0",           # Explicitly move to 2.0 to align all C-headers
    "pytest>=9.0.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "psutil>=5.9.0",  # For memory profiling and monitoring (T032)
]
